fixed overlapping of timer and title
removed fixed position of timer so that page is now responsive and doesn't have overlap on a smaller screen size

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,6 @@
 .timer {
 	font-family: "Roboto Mono", monospace;
 	font-size: 3rem;
-	position: fixed;
-	top: 0;
-	left: 25px;
 }
 
 .enter-prompt {
